[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluesms"
version = "1.1.2"
description = "A Python library for sending SMS messages via BlueSMS"
readme = "README.md"
authors = [
    {name = "Mwanja Joel"},
    {name = "Loyo Moses Victor"}
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sms", "bluesms", "python"]

[tool.pytest.ini_options]
python_files = "*_tests.py"

[project.urls]
Homepage = "https://github.com/mwanjajoel/bluesms"